--- a/app/src/main/res/layout/dialoglayout.xml
+++ b/app/src/main/res/layout/dialoglayout.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/tvdiagname"
-        android:layout_marginLeft="71dp"
+        android:layout_marginLeft="50dp"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/tvdname" />
 
@@ -110,6 +110,15 @@
         android:layout_alignStart="@+id/tvdiagmob" />
 
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/red"
+        android:src="@drawable/red"
+        android:visibility="visible"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
 
     <View
         android:layout_width="fill_parent"
