--- a/app/src/main/res/menu/login_page.xml
+++ b/app/src/main/res/menu/login_page.xml
@@ -5,4 +5,8 @@
         android:title="@string/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never" />
+    <item android:id="@+id/action_delete_user"
+        android:title="@string/action_delete_user"
+        android:orderInCategory="50"
+        android:showAsAction="never" />
 </menu>
