--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,6 +6,15 @@
     android:paddingLeft="5dp"
     android:background="@drawable/background"
     tools:context=".Home">
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin">
 
     <Button
         style="?android:attr/buttonBarButtonStyle"
@@ -39,13 +48,6 @@
         android:layout_marginBottom="0dp"
         android:id="@+id/seperatoradd"
         android:background="?android:attr/dividerVertical" />
+    </LinearLayout>
 
-    <Button
-        style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="sql"
-        android:id="@+id/sql"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-</LinearLayout>
+</RelativeLayout>
