--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:text="@string/button_sign_up"
-        android:background="null"
+        android:background="@null"
         android:textColor="#0000EE"
         android:textStyle="bold"
         android:id="@+id/button_sign_up"
